--- a/.github/workflows/deploy-aaron-kokal.com.yml
+++ b/.github/workflows/deploy-aaron-kokal.com.yml
@@ -21,6 +21,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Validate required secrets
+        run: |
+          test -n "${{ secrets.SSH_HOST }}" || { echo 'Missing secret SSH_HOST' >&2; exit 1; }
+          test -n "${{ secrets.SSH_PORT }}" || { echo 'Missing secret SSH_PORT' >&2; exit 1; }
+          test -n "${{ secrets.SSH_USER }}" || { echo 'Missing secret SSH_USER' >&2; exit 1; }
+          test -n "${{ secrets.WEBROOT }}" || { echo 'Missing secret WEBROOT' >&2; exit 1; }
+          test -n "${{ secrets.SSH_KEY }}" || { echo 'Missing secret SSH_KEY' >&2; exit 1; }
+
       - name: Setup SSH
         env:
           SSH_KEY: ${{ secrets.SSH_KEY }}
@@ -31,6 +39,14 @@ jobs:
           echo "$SSH_KEY" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan -p "$SSH_PORT" "$SSH_HOST" >> ~/.ssh/known_hosts
+
+      - name: Test SSH connection
+        env:
+          SSH_HOST: ${{ secrets.SSH_HOST }}
+          SSH_PORT: ${{ secrets.SSH_PORT }}
+          SSH_USER: ${{ secrets.SSH_USER }}
+        run: |
+          ssh -o BatchMode=yes -o IdentitiesOnly=yes -p "$SSH_PORT" "$SSH_USER@$SSH_HOST" 'echo ok'
 
       - name: Rsync deploy
         env:
